# smnt

./: .gitignore  Dockerfile  SMN't.ipynb  docker-compose.yml  prefect_docker-compose.yml  pyproject.toml
smnt/: cli.py  config.py  database.py  load.py  models.py  scraping.py  task_prefect.py
smnt/dags/: etl.py
